# chain

./: CMakeLists.txt  demo.cpp
cmake/: test_openssl.cpp
include/: block.h  blockchain.h  database_adapter.h  memory_proof.h  memory_storage.h  transaction.h  utils.h  wallet.h
src/: block.cpp  blockchain.cpp  database_adapter.cpp  main.cpp  memory_proof.cpp  memory_storage.cpp  transaction.cpp  utils.cpp  wallet.cpp
web/include/: ahmiyat_web.h  simple_http_server.h
web/public/: index.html
web/public/css/: styles.css
web/public/js/: main.js
web/src/: ahmiyat_web.cpp  main.cpp  simple_http_server.cpp
